@@ -60,7 +60,7 @@ test indexObj-2.4 {ambiguous value} testindexobj {
 test indexObj-2.5 {omit error message} testindexobj {
     list [catch {testindexobj 0 1 d x} msg] $msg
 } {1 {}}
-test indexObj-2.6 {TCL_EXACT => no "ambiguous" error message} {
+test indexObj-2.6 {TCL_EXACT => no "ambiguous" error message} testindexobj {
     list [catch {testindexobj 1 0 d dumb daughter a c} msg] $msg
 } {1 {bad token "d": must be dumb, daughter, a, or c}}
 test indexObj-2.7 {exact match of empty values} testindexobj {
