@@ -627,7 +627,7 @@ test info-19.6 {info vars: Bug 1072654} -setup {
 
 set functions {abs acos asin atan atan2 bool ceil cos cosh double entier exp floor fmod hypot int log log10 max min pow rand round sin sinh sqrt srand tan tanh wide}
 # Check whether the extra testing functions are defined...
-if {!([catch {expr T1()} msg] && ($msg eq {unknown math function "T1"}))} {
+if {!([catch {expr T1()} msg] && ($msg eq {invalid command name "tcl::mathfunc::T1"}))} {
     set functions "T1 T2 T3 $functions"  ;# A lazy way of prepending!
 }
 test info-20.1 {info functions option} {info functions sin} sin
