@@ -14,7 +14,7 @@
 # RCS: @(#) $Id$
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
-    package require tcltest
+    package require tcltest 2
     namespace import -force ::tcltest::*
 }
 
@@ -316,11 +316,13 @@ test upvar-8.7 {errors in upvar command} {
     proc p1 {} {trace variable a w foo; upvar b a}
     list [catch p1 msg] $msg
 } {1 {variable "a" has traces: can't use for upvar}}
-test upvar-8.8 {create nested array with upvar} {
+test upvar-8.8 {create nested array with upvar} -body {
     proc p1 {} {upvar x(a) b; set b(2) 44}
     catch {unset x}
     list [catch p1 msg] $msg
-} {1 {can't set "b(2)": variable isn't array}}
+} -cleanup {
+    unset x
+} -result {1 {can't set "b(2)": variable isn't array}}
 test upvar-8.9 {upvar won't create namespace variable that refers to procedure variable} {
     catch {namespace delete {expand}[namespace children :: test_ns_*]}
     catch {rename MakeLink ""}
